--- a/.github/workflows/wsl-deb.yml
+++ b/.github/workflows/wsl-deb.yml
@@ -1,40 +1,52 @@
 name: wsl deb
+on: [push, pull_request]
 
-on:
-  push:
-    branches:
-      - main
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: [Debian]
-    defaults:
-      run:
-        shell: wsl-bash {0}
-    runs-on: windows-2025
+  debian-test:
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Setup Debian WSL
+        uses: Vampire/setup-wsl@v6
         with:
-          repository: HDFGroup/hdf5
-      - uses: Vampire/setup-wsl@v6
-        with:
-          distribution: ${{ matrix.os }}
-          update: true
-          version: 13.1
+          distribution: Debian
           use-cache: true
-          set-as-default: true
-          additional-packages:
-            dos2unix
-            cmake
-            curl
-            build-essential
-            ca-certificates
-      - name: test
+
+      - name: Fix Repository Issues
+        shell: wsl-bash {0}
         run: |
-          mkdir build
-          cd build
-          cmake -DSITE:STRING="deb/WSL" -DBUILDNAME:STRING="r" \
-          -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-          -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-          ctest -D Experimental -C Release
+          echo "=== Current System Info ==="
+          cat /etc/os-release
+          echo ""
+
+          echo "=== Current Sources ==="
+          cat /etc/apt/sources.list
+          echo ""
+
+          echo "=== Cleaning up problematic repositories ==="
+          # Remove any backports or problematic entries
+          sudo sed -i '/bullseye-backports/d' /etc/apt/sources.list
+          sudo sed -i '/bullseye\/updates/d' /etc/apt/sources.list
+
+          # Remove any additional sources that might cause issues
+          sudo rm -f /etc/apt/sources.list.d/*backports* 2>/dev/null || true
+
+          echo "=== Updated Sources ==="
+          cat /etc/apt/sources.list
+
+      - name: Update Package Lists
+        shell: wsl-bash {0}
+        run: |
+          sudo apt clean
+          sudo apt update
+
+      - name: Install Basic Tools
+        shell: wsl-bash {0}
+        run: |
+          sudo apt install -y \
+            curl \
+            wget \
+            git \
+            build-essential \
+            python3 \
+            python3-pip
