--- a/.github/workflows/mac-26.yml
+++ b/.github/workflows/mac-26.yml
@@ -1,32 +1,37 @@
-name: mac-26 f j sz zl
+name: mac-26 ompi f j sz zl
 
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
-    name: mac-26 f j sz zl
+    name: mac-26 ompi f j sz zl
     runs-on: macos-26
     steps:
       - uses: actions/checkout@v4
         with:
           repository: HDFGroup/hdf5
       - name: install
-        run: brew install libaec
+        run: brew install libaec openmpi
       - name: test
         run: |
+          export OMPI_MCA_rmaps_base_oversubscribe=1
           mkdir build
           cd build
           cmake \
-          -DBUILDNAME:STRING=f/j/sz/zl \
+          -DBUILDNAME:STRING=ompi/f/j/sz/zl \
           -DCMAKE_Fortran_COMPILER=/opt/homebrew/bin/gfortran-15 \
           -DCTEST_DROP_SITE_INIT=my.cdash.org \
+          -DHDF5_ALLOW_UNSUPPORTED=ON \
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_BUILD_JAVA=ON \
+          -DHDF5_ENABLE_PARALLEL=ON \
           -DHDF5_ENABLE_SZIP_SUPPORT=ON \
           -DHDF5_ENABLE_ZLIB_SUPPORT=ON \
+          -DMPI_C_COMPILER=mpicc \
+          -DMPIEXEC_MAX_NUMPROCS=2 \
           -DSITE:STRING=mac-26 \
           ..
           ctest -C Release -D Experimental
