--- a/.github/workflows/wsl-kali.yml
+++ b/.github/workflows/wsl-kali.yml
@@ -2,9 +2,9 @@ name: WSL Kali Linux Setup and Update
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main- ]
   pull_request:
-    branches: [ main ]
+    branches: [ main- ]
   workflow_dispatch:
 
 jobs:
