ci: disable actions

--- a/.github/workflows/ssh_2222.yml
+++ b/.github/workflows/ssh_2222.yml
@@ -1,9 +1,9 @@
-name: Test Local SSH on Runner
+name: ssh 2222
 
 on:
   push:
     branches:
-      - main  
+      - main-
 
 jobs:
   test_local_ssh:
