--- a/.github/workflows/arm64_win-11_vcpkg.yml
+++ b/.github/workflows/arm64_win-11_vcpkg.yml
@@ -1,13 +1,13 @@
-name: windows-25 vcpkg hdf5 develop
+name: arm64 win-11 vcpkg hdf5 develop
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
-    runs-on: windows-2025
+    runs-on: windows-11-arm
 
     steps:
       - name: Checkout vcpkg
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install HDF5 develop branch via vcpkg
         run: |
-          .\vcpkg\vcpkg install hdf5:x64-windows --head
+          .\vcpkg\vcpkg install hdf5:arm64-windows --head
 
       - name: Test HDF5 installation
         run: |
