--- a/.github/workflows/arm64_win-11_vcpkg.yml
+++ b/.github/workflows/arm64_win-11_vcpkg.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install HDF5 develop branch via vcpkg
         run: |
-          .\vcpkg\vcpkg install hdf5:arm64-windows --head
+          .\vcpkg\vcpkg install hdf5[mpi,test]:arm64-windows --head
 
       - name: Test HDF5 installation
         run: |
