--- a/.github/workflows/win-25_vcpkg.yml
+++ b/.github/workflows/win-25_vcpkg.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install HDF5 develop branch via vcpkg
         run: |
-          .\vcpkg\vcpkg install hdf5[mpi,test]:x64-windows --head
+          .\vcpkg\vcpkg install hdf5[parallel]:x64-windows --head
 
       - name: Test HDF5 installation
         run: |
