--- a/.github/workflows/deb-gdl.yml
+++ b/.github/workflows/deb-gdl.yml
@@ -2,9 +2,7 @@ name: deb gdl
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ main- ]
 
 jobs:
   test-on-debian-experimental:
