--- a/.github/workflows/s390x_h5.yml
+++ b/.github/workflows/s390x_h5.yml
@@ -2,7 +2,7 @@ name: s390x h5
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   aarch64_job:
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: lrknox/hdf5
-          ref: add-bigiendian-files
+          repository: byrnHDF/hdf5
+          ref: develop-big-endian
 
       - uses: uraimo/run-on-arch-action@v3
         name: Run commands
@@ -36,10 +36,9 @@ jobs:
             cmake \
             -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -D SITE:STRING=s390x \
-            -DBUILDNAME:STRING="pr-5849" \
+            -DBUILDNAME:STRING="pr-5866" \
             ..
             ctest -C Release -D Experimental
-
 
       - name: Get the output
         # Echo the `uname` output parameter from the `runcmd` step
