--- a/.github/workflows/ndk.yml
+++ b/.github/workflows/ndk.yml
@@ -1,8 +1,8 @@
-name: Setup Android NDK
+name: ndk
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   ndk:
     name: ndk
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: sheldonrobinson/hdf5
+          repository: HDFGroup/hdf5
 
       - name: test
         run: |
@@ -22,8 +22,8 @@ jobs:
           -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
           -DANDROID:BOOL=TRUE \
           -DANDROID_ABI=arm64-v8a \
-          -DBUILDNAME:STRING=pr4986/ndk27.0 \
+          -DBUILDNAME:STRING=ndk \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DSITE:STRING=arm64-v8a \
           ..
-          ctest -VV -T Build
+          ctest -D Experimental
