--- a/.github/workflows/ndk-test.yml
+++ b/.github/workflows/ndk-test.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   ndk-build-and-test:
     name: Android NDK ARM64 Build and Test
-    runs-on: ubuntu-24.04-arm
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -16,6 +16,7 @@ jobs:
 
       - name: Configure with NDK
         run: |
+          dir /usr/local/lib/android/sdk/ndk/          
           mkdir build
           cd build
           cmake \
