--- a/.github/workflows/ndk-test.yml
+++ b/.github/workflows/ndk-test.yml
@@ -6,47 +6,22 @@ on:
 jobs:
   ndk-build-and-test:
     name: Android NDK ARM64 Build and Test
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-24.04-arm
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          repository: hyoklee/hdf5
-
-
-      - name: Configure with NDK
-        run: |
-          dir /usr/local/lib/android/sdk/ndk/          
-          mkdir build
-          cd build
-          cmake \
-            -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
-            -DANDROID:BOOL=TRUE \
-            -DANDROID_ABI=arm64-v8a \
-            -DANDROID_PLATFORM=android-21 \
-            -DBUILDNAME:STRING="hk/ndk-test" \
-            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DSITE:STRING=arm64-v8a \
-            ..
-
-      - name: Build
-        run: |
-          cd build
-          cmake --build . -j$(nproc)
-
       - name: Set up Android Emulator
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 29
           arch: arm64-v8a
+          ndk: 27.3.13750724
           profile: pixel_6
           script: |
             echo "Emulator started"
             # Push test binaries to emulator
-            adb push build/bin /data/local/tmp/hdf5-tests/
+            adb push /bin/ls /data/local/tmp/hdf5-tests/
 
             # Run tests on emulator
-            adb shell "cd /data/local/tmp/hdf5-tests && ./testhdf5"
+            adb shell "cd /data/local/tmp/hdf5-tests && ./ls"
 
       - name: Upload Test Results
         if: always()
