--- a/.github/workflows/ndk-test.yml
+++ b/.github/workflows/ndk-test.yml
@@ -6,18 +6,26 @@ on:
 jobs:
   ndk-build-and-test:
     name: Android NDK ARM64 Build and Test
-    runs-on: ubuntu-24.04-arm
+    runs-on: ubuntu-latest
     steps:
+      - name: Enable KVM group perms
+        run: |
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+        sudo udevadm control --reload-rules
+        sudo udevadm trigger --name-match=kvm
       - name: Set up Android Emulator
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 29
-          arch: arm64-v8a
-          ndk: 27.3.13750724
-          profile: pixel_6
+           arch: x86-64
+#          arch: arm64-v8a
+#          ndk: 27.3.13750724
+#          profile: pixel_6
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           script: |
             echo "Emulator started"
             # Push test binaries to emulator
+            adb devices
             adb push /bin/ls /data/local/tmp/hdf5-tests/
 
             # Run tests on emulator
