--- a/.github/workflows/ndk-test-arm64.yml
+++ b/.github/workflows/ndk-test-arm64.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout HDF5
         uses: actions/checkout@v4
         with:
-          repository: hyoklee/hdf5
+          repository: HDFGroup/hdf5
 
       - name: Build and Test HDF5 for arm64-v8a
         run: |
@@ -21,9 +21,9 @@ jobs:
             -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_ROOT/build/cmake/android.toolchain.cmake \
             -DANDROID:BOOL=TRUE \
             -DANDROID_ABI=arm64-v8a \
-            -DBUILDNAME:STRING="hk/ndk-arm64" \
+            -DBUILDNAME:STRING="ndk-27.3" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DSITE:STRING=arm64-v8a \
+            -DSITE:STRING=mac-26 \
             ..
           ctest -D Experimental
 
