--- a/.github/workflows/nvhpc-25.9.yml
+++ b/.github/workflows/nvhpc-25.9.yml
@@ -41,5 +41,7 @@ jobs:
             -DHDF5_BUILD_JAVA:BOOL=OFF \
             -DHDF5_ENABLE_PARALLEL:BOOL=ON \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DSITE:STRING=ubu-24 \
             ..
           ctest -D Experimental
