--- a/.github/workflows/hdf5-cross-compile-issue-5921.yml
+++ b/.github/workflows/hdf5-cross-compile-issue-5921.yml
@@ -3,7 +3,7 @@ name: HDF5 Cross-Compilation Issue 5921
 on:
   push:
     branches:
-      - main
+      - main-
   pull_request:
   workflow_dispatch:
 
