--- a/.github/workflows/nbsd-qxk.yml
+++ b/.github/workflows/nbsd-qxk.yml
@@ -2,7 +2,7 @@ name: nbsd
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -19,8 +19,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: qkoziol/hdf5
-          ref: ts_h5fl_reg
+          repository: mattjala/hdf5
+          ref: qsort_fallback
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
         env:
@@ -43,7 +43,7 @@ jobs:
             cd build
             cmake \
             -DSITE:STRING="nbsd-${{ matrix.os.version }}.${{ matrix.os.architecture }}" \
-            -DBUILDNAME:STRING="r/QxK-fix_semaphore_test_3" \
+            -DBUILDNAME:STRING="pr5931/r" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             ..
