--- a/.github/workflows/ndk.yml
+++ b/.github/workflows/ndk.yml
@@ -2,7 +2,7 @@ name: ndk
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   ndk:
     name: ndk
@@ -11,7 +11,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: HDFGroup/hdf5
+          repository: mattjala/hdf5
+          ref: qsort_fallback
 
       - name: test
         run: |
@@ -22,7 +23,7 @@ jobs:
           -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
           -DANDROID:BOOL=TRUE \
           -DANDROID_ABI=arm64-v8a \
-          -DBUILDNAME:STRING="ndk-27.3" \
+          -DBUILDNAME:STRING="pr5931/ndk-27.3" \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DSITE:STRING=ubu-24 \
           ..
