--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -1,8 +1,8 @@
-name: r
+name: r 5933
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: mattjala/hdf5
-          ref: qsort_fallback
+          ref: rtree_test_family_vfd_fix
 
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
@@ -40,7 +40,7 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="pr5931/r/cpp/+hl+ts-sz-zl" \
+            -DBUILDNAME:STRING="pr5933/r/cpp/+hl+ts-sz-zl/da+dw+tv" \
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
@@ -51,5 +51,6 @@ jobs:
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
             -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF \
             -DSITE:STRING=obsd \
+            -DHDF5_TEST_API=ON -DHDF5_ENABLE_ALL_WARNINGS=ON -DHDF5_ENABLE_DEBUG_APIS:BOOL=ON -DHDF5_ENABLE_DEV_WARNINGS=ON -DHDF5_TEST_VFD:BOOL=ON \
             ..
             ctest -D Experimental -C Release
