--- a/.github/workflows/lin.yml
+++ b/.github/workflows/lin.yml
@@ -3,18 +3,33 @@ name: lin
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: mattjala/hdf5
+          ref: rtree_test_family_vfd_fix
+      
       - name: test
-        shell: bash
         run: |
-          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
-          tar zxvf snapshot-1.14.5.tar.gz
-          cd hdf5-1.14.5-2	    
           mkdir build
           cd build
-          cmake -DSITE:STRING="ubu" -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-          ctest -D Experimental -C Release
+          cmake \
+            -DBUILDNAME:STRING="pr5933/r/cpp/+hl+ts-sz-zl/da+dw+tv" \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
+            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DHDF5_ALLOW_UNSUPPORTED:BOOL=ON \
+            -DHDF5_BUILD_CPP_LIB:BOOL=ON \
+            -DHDF5_BUILD_HL_LIB:BOOL=ON \
+            -DHDF5_ENABLE_THREADSAFE:BOOL=ON \
+            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+            -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF \
+            -DSITE:STRING=ubu-24 \
+            -DHDF5_TEST_API=ON -DHDF5_ENABLE_ALL_WARNINGS=ON -DHDF5_ENABLE_DEBUG_APIS:BOOL=ON -DHDF5_ENABLE_DEV_WARNINGS=ON -DHDF5_TEST_VFD:BOOL=ON \
+            ..
+            ctest -D Experimental -C Release          
