--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -2,7 +2,7 @@ name: r 5933
 
 on:
   push:
-    branches: main
+    branches: main-
 
 jobs:
   test: # make sure the action works on a clean machine without building
