--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -2,7 +2,7 @@ name: r 5933
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: mattjala/hdf5
-          ref: rtree_test_family_vfd_fix
+          ref: qsort_fallback
 
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
