--- a/.github/workflows/obsd_vm.yml
+++ b/.github/workflows/obsd_vm.yml
@@ -15,7 +15,8 @@ jobs:
       - name: checkout
         uses: actions/checkout@v5
         with:
-          repository: hyoklee/hdf5
+          repository: mattjala/hdf5
+          ref: qsort_fallback
       - name: test
         uses: vmactions/openbsd-vm@v1
         with:
@@ -26,7 +27,7 @@ jobs:
             mkdir build
             cd build
             cmake -DSITE:STRING="obsd-7.8" \
-            -DBUILDNAME:STRING="hk/r/cpp/+hl+ts-sz-zl/da+dw+tv" \
+            -DBUILDNAME:STRING="pr5931/r/cpp/+hl+ts-sz-zl/da+dw+tv" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             -DCMAKE_BUILD_TYPE=Release \
