--- a/.github/workflows/obsd_vm.yml
+++ b/.github/workflows/obsd_vm.yml
@@ -2,7 +2,7 @@ name: obsd vm
 
 on:
   push:
-    branches: main-
+    branches: main
 
 defaults:
   run:
@@ -27,7 +27,7 @@ jobs:
             mkdir build
             cd build
             cmake -DSITE:STRING="obsd-7.8" \
-            -DBUILDNAME:STRING="pr5931/r/cpp/+hl+ts-sz-zl/da+dw+tv" \
+            -DBUILDNAME:STRING="pr5931/d/cpp/+hl+ts-sz-zl/da+dw+tv" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             -DCMAKE_BUILD_TYPE=Release \
@@ -37,5 +37,6 @@ jobs:
             -DHDF5_ENABLE_THREADSAFE:BOOL=ON \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
             -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF \
+            -DHDF5_TEST_API=ON -DHDF5_ENABLE_ALL_WARNINGS=ON -DHDF5_ENABLE_DEBUG_APIS:BOOL=ON -DHDF5_ENABLE_DEV_WARNINGS=ON -DHDF5_TEST_VFD:BOOL=ON \
             ..
-            ctest -D Experimental -C Release
+            ctest -D Experimental -C Debug
