--- a/.github/workflows/r_5931.yml
+++ b/.github/workflows/r_5931.yml
@@ -40,7 +40,7 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="pr5931/r/cpp/+hl+ts-sz-zl/da+dw+tv" \
+            -DBUILDNAME:STRING="pr5931/d/cpp/+hl+ts-sz-zl/da+dw+tv" \
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
@@ -53,4 +53,4 @@ jobs:
             -DSITE:STRING=obsd-7.7 \
             -DHDF5_TEST_API=ON -DHDF5_ENABLE_ALL_WARNINGS=ON -DHDF5_ENABLE_DEBUG_APIS:BOOL=ON -DHDF5_ENABLE_DEV_WARNINGS=ON -DHDF5_TEST_VFD:BOOL=ON \
             ..
-            ctest -D Experimental -C Release
+            ctest -D Experimental -C Debug
