--- a/.github/workflows/lin.yml
+++ b/.github/workflows/lin.yml
@@ -1,35 +1,32 @@
-name: lin 5933
+name: lin d cc da dw tv
 
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: h5
+        uses: actions/checkout@v5
         with:
-          repository: mattjala/hdf5
-          ref: rtree_test_family_vfd_fix
-      
+          repository: HDFGroup/hdf5
+
       - name: test
         run: |
           mkdir build
           cd build
           cmake \
-            -DBUILDNAME:STRING="pr5933/r/cpp/+hl+ts-sz-zl/da+dw+tv" \
-            -DCMAKE_BUILD_TYPE=Release \
+            -DBUILDNAME:STRING="d/cc/da/dw/tv" \
+            -DCMAKE_BUILD_TYPE=Debug \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DHDF5_ALLOW_UNSUPPORTED:BOOL=ON \
-            -DHDF5_BUILD_CPP_LIB:BOOL=ON \
-            -DHDF5_BUILD_HL_LIB:BOOL=ON \
-            -DHDF5_ENABLE_THREADSAFE:BOOL=ON \
+            -DHDF5_ENABLE_CONCURRENCY:BOOL=ON \
+            -DHDF5_ENABLE_THREADSAFE:BOOL=OFF \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
             -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF \
             -DSITE:STRING=ubu-24 \
             -DHDF5_TEST_API=ON -DHDF5_ENABLE_ALL_WARNINGS=ON -DHDF5_ENABLE_DEBUG_APIS:BOOL=ON -DHDF5_ENABLE_DEV_WARNINGS=ON -DHDF5_TEST_VFD:BOOL=ON \
             ..
-            ctest -D Experimental -C Release          
+            ctest -D Experimental -C Release
