--- a/.github/workflows/lin.yml
+++ b/.github/workflows/lin.yml
@@ -1,4 +1,4 @@
-name: lin d cc da dw tv
+name: lin pr5944 d cc da dw tv v16
 
 on:
   push:
@@ -25,7 +25,7 @@ jobs:
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DHDF5_BUILD_HL_LIB:BOOL=OFF \
-            -DHDF5_BUILD_FORTRAN=ON \
+            -DHDF5_BUILD_FORTRAN=OFF \
             -DHDF5_ENABLE_CONCURRENCY:BOOL=ON \
             -DHDF5_ENABLE_THREADSAFE:BOOL=OFF \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
