--- a/.github/workflows/lin_icx_f_p_sf.yml
+++ b/.github/workflows/lin_icx_f_p_sf.yml
@@ -35,11 +35,9 @@ jobs:
           source /opt/intel/oneapi/setvars.sh
           mkdir build
           cd build
-          cmake -DSITE:STRING="ubu-24" -DBUILDNAME:STRING="icx/f/p/sf" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
+          cmake -DSITE:STRING="ubu-24" -DBUILDNAME:STRING="icx/f/h/p" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_ENABLE_PARALLEL=ON \
           -DHDF5_BUILD_HL_LIB=ON \
-          -DMKL_ROOT="/opt/intel/oneapi/mkl/latest" \
-          -DTBB_ROOT="/opt/intel/oneapi/tbb/latest" \
            ..
           ctest -D Experimental -C Release
