--- a/.github/workflows/lin_icx_f_p_sf.yml
+++ b/.github/workflows/lin_icx_f_p_sf.yml
@@ -36,6 +36,9 @@ jobs:
           mkdir build
           cd build
           cmake -DSITE:STRING="ubu-24" -DBUILDNAME:STRING="icx/f/h/p" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
+          -DCMAKE_C_COMPILER=icx \
+          -DCMAKE_Fortran_COMPILER=ifx \
+          -DCMAKE_CXX_COMPILER=icpx \
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_ENABLE_PARALLEL=ON \
           -DHDF5_BUILD_HL_LIB=ON \
