--- a/.github/workflows/lin_icx_f_h.yml
+++ b/.github/workflows/lin_icx_f_h.yml
@@ -35,12 +35,12 @@ jobs:
           source /opt/intel/oneapi/setvars.sh
           mkdir build
           cd build
-          cmake -DSITE:STRING="ubu-24" -DBUILDNAME:STRING="icx/f/h/p" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
-          -DCMAKE_C_COMPILER=mpiicx \
-          -DCMAKE_Fortran_COMPILER=mpiifx \
-          -DCMAKE_CXX_COMPILER=mpiicpx \
+          cmake -DSITE:STRING="ubu-24" -DBUILDNAME:STRING="icx/f/h" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
+          -DCMAKE_C_COMPILER=icx \
+          -DCMAKE_Fortran_COMPILER=ifx \
+          -DCMAKE_CXX_COMPILER=icpx \
           -DHDF5_BUILD_FORTRAN=ON \
-          -DHDF5_ENABLE_PARALLEL=ON \
+          -DHDF5_ENABLE_PARALLEL=OFF \
           -DHDF5_BUILD_HL_LIB=ON \
            ..
           ctest -D Experimental -C Release
