--- a/.github/workflows/lin_mem_chk.yml
+++ b/.github/workflows/lin_mem_chk.yml
@@ -3,9 +3,9 @@ name: lin mem chk
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ main- ]
   pull_request:
-    branches: [ main ]
+    branches: [ main- ]
 
 permissions:
   contents: read
