--- a/.github/workflows/mac-26_ninja_mpich-4.3.0_cl-17_r_f_sf.yml
+++ b/.github/workflows/mac-26_ninja_mpich-4.3.0_cl-17_r_f_sf.yml
@@ -3,7 +3,7 @@ name: mac-26 mpich clang-17 r f sf
 on:
   workflow_dispatch:
   push:
-    branches: develop
+    branches: main
 jobs:
   build:
     name: mac-26 mpich clang-17 r f sf
