--- a/.github/workflows/win_mgw_sta.yml
+++ b/.github/workflows/win_mgw_sta.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           repository: HDFGroup/hdf5
 
-      - name: Configure CMake
+      - name: test
         run: |
           mkdir -p build
           cd build
@@ -61,8 +61,8 @@ jobs:
             -DZLIB_USE_LOCALCONTENT:BOOL=OFF \
             -DLIBAEC_USE_LOCALCONTENT:BOOL=OFF \
             -DBUILDNAME:STRING="mw/cpp" \
-            -DSITE:STRING=win-22 \
+            -DSITE:STRING="win-22" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             ..
-         cmake -D Experimental
+          cmake -D Experimental
