--- a/.github/workflows/mac-26_ninja_mpich-4.3.0_cl-17_r_f_sf.yml
+++ b/.github/workflows/mac-26_ninja_mpich-4.3.0_cl-17_r_f_sf.yml
@@ -1,12 +1,12 @@
-name: mac-26 mpich clang-17 r f sf
+name: mac-26 mpich-4.3.0 clang-17 f j hl aw -ts sf np=3
 
 on:
   workflow_dispatch:
   push:
-    branches: main-
+    branches: main
 jobs:
   build:
-    name: mac-26 mpich clang-17 r f sf
+    name: mac-26 mpich-4.3.0 cl-17 f j hl aw -ts sf np=3
     runs-on: macos-26
 
     steps:
@@ -42,7 +42,7 @@ jobs:
           cmake -G Ninja \
             -DCMAKE_C_COMPILER=/opt/local/bin/mpicc-mpich-clang17 \
             -DCMAKE_Fortran_COMPILER=/opt/local/bin/mpifort-mpich-clang17 \
-            -DBUILDNAME="ninja/mpich-4.3/clang-17/f/j/hl/aw/-ts/sf/np=3" \
+            -DBUILDNAME="ninja/mpich-4.3/cl-17/f/j/hl/aw/-ts/sf/np=3" \
             -DCTEST_DROP_SITE_INIT=my.cdash.org \
             -DHDF5_BUILD_JAVA:BOOL=ON \
             -DHDF5_BUILD_FORTRAN:BOOL=ON \
@@ -53,5 +53,5 @@ jobs:
             -DHDF5_ENABLE_SUBFILING_VFD:BOOL=ON \
             -DMPIEXEC_MAX_NUMPROCS:STRING=3 \
             ..
-          ctest -T Build
-          ctest -C Release -T Test
+          ctest -D Experimental
+
