ci(mac): test frameworks

--- a/.github/workflows/mac-26_ninja_mpich-4.3.0_cl-17_r_f_sf.yml
+++ b/.github/workflows/mac-26_ninja_mpich-4.3.0_cl-17_r_f_sf.yml
@@ -3,7 +3,7 @@ name: mac-26 mpich-4.3.0 clang-17 f j hl aw -ts sf np=3
 on:
   workflow_dispatch:
   push:
-    branches: main
+    branches: main-
 jobs:
   build:
     name: mac-26 mpich-4.3.0 cl-17 f j hl aw -ts sf np=3
