--- a/.github/workflows/mac-26_ninja_mpich-4.3.0_cl-17_fl_d_f_sf.yml
+++ b/.github/workflows/mac-26_ninja_mpich-4.3.0_cl-17_fl_d_f_sf.yml
@@ -3,7 +3,7 @@ name: mac-26 ninja d mpich cl fl sf
 on:
   workflow_dispatch:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   build:
@@ -15,19 +15,17 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: HDFGroup/hdf5
-    
+
       - name: get
         run: |
           curl -O -L  https://github.com/macports/macports-base/releases/download/v2.11.5/MacPorts-2.11.5-26-Tahoe.pkg
       - name: install
         run: |
           brew install flang --build-from-source
-          sudo installer -pkg MacPorts-2.11.5-26-Tahoe.pkg -target /        
+          sudo installer -pkg MacPorts-2.11.5-26-Tahoe.pkg -target /
       - name: update
         run: |
           export PATH=/opt/local/bin:/opt/local/sbin:$PATH
-          ls -l /opt/local/bin
-          ls -l /opt/local/sbin
           sudo port selfupdate
       - name: mpich
         run: |
@@ -39,11 +37,15 @@ jobs:
         run: |
           export PATH=/opt/local/bin:/opt/local/sbin:$PATH
           env
+          ls -l /opt/local/bin
+          ls -l /opt/local/sbin
           mkdir build
           cd build
           cmake -G Ninja \
             -DCMAKE_C_COMPILER=/opt/local/bin/mpicc-mpich-clang \
             -DCMAKE_Fortran_COMPILER=/opt/local/bin/mpifort-mpich-clang \
+            -DBUILDNAME="ninja/mpich-4.3/cl-17/fl/aw/sf/np=3" \
+            -DCTEST_DROP_SITE_INIT=my.cdash.org \
             -DCMAKE_BUILD_TYPE=Debug \
             -DBUILD_SHARED_LIBS=ON \
             -DBUILD_STATIC_EXECS:BOOL=OFF \
@@ -54,6 +56,6 @@ jobs:
             -DHDF5_ENABLE_SUBFILING_VFD:BOOL=ON \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
             -DMPIEXEC_MAX_NUMPROCS:STRING=3 \
+            -DSITE:STRING="mac-26" \
             ..
-          ctest -T Build
-          ctest -C Release -T Test
+          ctest -D Experimental
