--- a/.github/workflows/lin_sta_onl_ci.yml
+++ b/.github/workflows/lin_sta_onl_ci.yml
@@ -1,9 +1,9 @@
-name: Linux Static-Only Build
+name: Linux Static-Only Build CI
 
 on:
   workflow_dispatch:
   push:
-    branches: main-
+    branches: main
 
 permissions:
   contents: read
@@ -39,10 +39,8 @@ jobs:
             -DBUILD_SHARED_LIBS:BOOL=OFF \
             -DBUILD_STATIC_LIBS:BOOL=ON \
             -DHDF5_ONLY_SHARED_LIBS:BOOL=OFF \
-            -DHDF5_BUILD_STATIC_TOOLS:BOOL=ON \
-            -DBUILD_STATIC_EXECS:BOOL=ON \
             -DHDF5_BUILD_CPP_LIB:BOOL=ON \
             -DHDF5_BUILD_FORTRAN:BOOL=ON \
-            -DSITE:STRING="${{ matrix.os }}" -DBUILDNAME:STRING="st/cpp" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
+            -DSITE:STRING="${{ matrix.os }}" -DBUILDNAME:STRING="st/-stl/-sxc/cpp" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             ..
           ctest -D Experimental
