ci(ora-10): add cmake

--- a/.github/workflows/ora-10.yml
+++ b/.github/workflows/ora-10.yml
@@ -16,7 +16,7 @@ jobs:
           repository: HDFGroup/hdf5
       - name: test
         run: |
-          dnf install -y gfortran
+          dnf install -y cmake gfortran
           mkdir build
           cd build
           cmake \
