--- a/.github/workflows/ora-10.yml
+++ b/.github/workflows/ora-10.yml
@@ -16,7 +16,7 @@ jobs:
           repository: HDFGroup/hdf5
       - name: test
         run: |
-          dnf install -y cmake
+          dnf install -y cmake clang
           mkdir build
           cd build
           cmake \
