ci(mac14): set path for mpich

--- a/.github/workflows/f.yml
+++ b/.github/workflows/f.yml
@@ -36,7 +36,7 @@ jobs:
           run: |
             sudo pkg_add git
             sudo pkg_add cmake
-            sudo pkg_add g95-15.2.0p0
+            sudo pkg_add g95
             export FC=/usr/local/bin/egfortran
             mkdir build
             cd build
